fix: Adjust responsive issues on mobile devices

--- a/style.css
+++ b/style.css
@@ -738,12 +738,9 @@
     font-size: 120%;
     font-weight: 600;
     border-radius: 10px;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin-right: 20px;
-    margin-top: 30px;
+    padding: 20px 35px 15px 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .section7 .container .center .title form .one .email {
@@ -757,12 +754,9 @@
     font-size: 120%;
     font-weight: 600;
     border-radius: 10px;
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin-right: 20px;
-    margin-top: 30px;
+    padding: 20px 35px 15px 35px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .section7 .container .center .title form .choises {
@@ -778,11 +772,9 @@
     font-size: 120%;
     font-weight: 600;
     border-radius: 10px;
-    padding-left: 65px;
-    padding-right: 65px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin-right: 20px;
+
+    padding:15px 80px  15px 75px;
+  
     margin-top: 30px;
     margin-bottom: 30px;
 
@@ -879,7 +871,9 @@
         width: 40px;
         font-size: 200%;
     }
-
+    .section1 , .section2 , .section3 ,.section3 ,.section4 ,.section5 ,.section6 ,.section7 ,.section8{
+        width: 650px;
+    }
     .section1 .container .flex {
         flex-direction: column;
     }
@@ -891,7 +885,7 @@
     .section1 .container .part2 {
         width: 100%;
     }
-
+    
     .section2 .container .flex {
         flex-direction: column;
     }
@@ -947,22 +941,13 @@
 
     .section4 .container .flex .left .top {
         width: 100%;
-        flex-direction: column;
+        flex-direction: row;
     }
 
-    .section4 .container .flex .left .top .prt1 {
-        display: block;
-        width: 100%;
-    }
-
-    .section4 .container .flex .left .top .prt2 {
-        display: block;
-        width: 100%;
-    }
 
     .section4 .container .flex .left .bottom {
         width: 100%;
-        flex-direction: column;
+        flex-direction: row;
     }
 
     .section4 .container .flex .right {
@@ -998,7 +983,7 @@
     }
 
     .section7 .container .center .title {
-        width: 100%;
+        width: 70%;
     }
 
     .section7 .container .center .img {
